--- a/Backend/Bluvolt/src/main/resources/templates/index.html
+++ b/Backend/Bluvolt/src/main/resources/templates/index.html
@@ -206,8 +206,7 @@
         const tipoUsuario = /*[[${tipo}]]*/ "null";
     </script>
 
-    <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{/js/main.js}"></script>
+    <script th:src="@{/js/main2.js}"></script>
 </body>
 </html>
